--- a/style/style.css
+++ b/style/style.css
@@ -1,10 +1,14 @@
-.global-content {
+.wrapper {
+  height: 100vh;
+  color: white;
+}
+.wrapper .global-content {
   background-color: #1E2D3B;
   flex-grow: 1;
   margin-top: 60px;
   overflow-y: scroll;
 }
-.global-content .content-top {
+.wrapper .global-content .gb-content-top {
   position: fixed;
   top: 0;
   left: 0;
@@ -12,13 +16,18 @@
   min-height: 60px;
   background-color: #2D3945;
   font-size: 0.9rem;
+  margin-bottom: 100px;
 }
-.global-content .content-top .logo {
+.wrapper .global-content .gb-content-top .logo {
   font-size: 35px;
   color: #35BD59;
 }
-
-.gb-card {
+.wrapper .global-content .gb-container {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 1800px;
+}
+.wrapper .global-content .gb-container .gb-card {
   background-color: #2D3945;
   height: 100%;
   font-size: 0.8rem;
@@ -26,20 +35,20 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.gb-card:hover {
+.wrapper .global-content .gb-container .gb-card:hover {
   transform: scale(1.05);
   background-color: #e7ecf0;
 }
-.gb-card:hover .title-song {
+.wrapper .global-content .gb-container .gb-card:hover .title-song {
   color: #1E2D3B;
 }
-.gb-card:hover .cover-image .layover {
+.wrapper .global-content .gb-container .gb-card:hover .cover-image .layover {
   display: block;
 }
-.gb-card .cover-image {
+.wrapper .global-content .gb-container .gb-card .cover-image {
   position: relative;
 }
-.gb-card .cover-image .layover {
+.wrapper .global-content .gb-container .gb-card .cover-image .layover {
   position: absolute;
   top: 0;
   left: 0;
@@ -49,7 +58,7 @@
   color: white;
   display: none;
 }
-.gb-card .cover-image .play-hover {
+.wrapper .global-content .gb-container .gb-card .cover-image .play-hover {
   font-size: 2.5rem;
   animation-name: play;
   animation-duration: 1.5s;
@@ -64,13 +73,13 @@
     transform: scale(1.2);
   }
 }
-.gb-card .title-song {
+.wrapper .global-content .gb-container .gb-card .title-song {
   text-transform: uppercase;
   margin-bottom: 20px;
   font-weight: 600;
 }
-.gb-card .author-song,
-.gb-card .date-song {
+.wrapper .global-content .gb-container .gb-card .author-song,
+.wrapper .global-content .gb-container .gb-card .date-song {
   color: #556c83;
 }
 
